--- a/notebooks/3 - Python Objects Map Lambda List Comprehensions.ipynb
+++ b/notebooks/3 - Python Objects Map Lambda List Comprehensions.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dwight Diercks works for nVidia located at nVidia\n"
+      "Dwight Diercks works for nVidia located at 2701 San Tomas Expressway Santa Clara, CA 95050\n"
      ]
     }
    ],
@@ -52,7 +52,7 @@
     "person = Person()\n",
     "person.set_name('Dwight Diercks')\n",
     "person.set_location('2701 San Tomas Expressway Santa Clara, CA 95050')\n",
-    "print('{} works for {} located at {}'.format(person.name, person.company, person.company))"
+    "print('{} works for {} located at {}'.format(person.name, person.company, person.location))"
    ]
   },
   {
@@ -68,16 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your answer here:\n"
+    "# Your answer here:\n",
+    "class Student:\n",
+    "    name = ''\n",
+    "    \n",
+    "    def set_name(self, new_name):\n",
+    "        self.name = new_name\n",
+    "    def get_name(self):\n",
+    "        return self.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +117,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +181,7 @@
        "map"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -236,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +252,7 @@
        "3"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +291,7 @@
        "3"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,9 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "def mod_it(x, mod_value):\n",
     "    if x % mod_value == 0:\n",
@@ -320,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -377,7 +393,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +950,7 @@
        " 998]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -956,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1464,7 +1480,7 @@
        " 998]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1489,14 +1505,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.44 µs ± 7.09 ns per loop (mean ± std. dev. of 7 runs, 1000000 loops each)\n"
+      "2.63 µs ± 454 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -1513,14 +1529,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.76 µs ± 65.8 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
+      "4.81 µs ± 402 ns per loop (mean ± std. dev. of 7 runs, 100000 loops each)\n"
      ]
     }
    ],
@@ -1541,9 +1557,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:py3.6tf1.3keras]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-py3.6tf1.3keras-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1555,7 +1571,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
