--- a/notebooks/5 - Python Numpy Aggregates.ipynb
+++ b/notebooks/5 - Python Numpy Aggregates.ipynb
@@ -71,7 +71,7 @@
     {
      "data": {
       "text/plain": [
-       "51.062545535130845"
+       "49.37277778970078"
       ]
      },
      "execution_count": 2,
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "51.06254553513083"
+       "49.37277778970077"
       ]
      },
      "execution_count": 3,
@@ -120,8 +120,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "146 ms ± 5.93 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "1.2 ms ± 45.4 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "146 ms ± 16.2 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "1.06 ms ± 19.7 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -157,7 +157,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.1854377479636469e-07, 0.9999981667611603)"
+       "(2.0047979825132956e-06, 0.9999996924308073)"
       ]
      },
      "execution_count": 5,
@@ -184,7 +184,7 @@
     {
      "data": {
       "text/plain": [
-       "(1.1854377479636469e-07, 0.9999981667611603)"
+       "(2.0047979825132956e-06, 0.9999996924308073)"
       ]
      },
      "execution_count": 6,
@@ -205,8 +205,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "61.8 ms ± 2.52 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
-      "465 µs ± 26.3 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
+      "64.4 ms ± 2.41 ms per loop (mean ± std. dev. of 7 runs, 10 loops each)\n",
+      "466 µs ± 31.6 µs per loop (mean ± std. dev. of 7 runs, 1000 loops each)\n"
      ]
     }
    ],
@@ -231,7 +231,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1854377479636469e-07 0.9999981667611603 500491.25242858304\n"
+      "2.0047979825132956e-06 0.9999996924308073 500145.001379418\n"
      ]
     }
    ],
@@ -264,9 +264,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.64517678 0.89200166 0.54860643 0.33811467]\n",
-      " [0.03054779 0.80522363 0.92132996 0.8052259 ]\n",
-      " [0.90856691 0.79599425 0.8867099  0.21350515]]\n"
+      "[[0.02319134 0.26448062 0.73504154 0.23091432]\n",
+      " [0.04969711 0.68004155 0.62184946 0.2520752 ]\n",
+      " [0.49728195 0.30497649 0.31266139 0.7406859 ]]\n"
      ]
     }
    ],
@@ -290,7 +290,7 @@
     {
      "data": {
       "text/plain": [
-       "7.791003040733378"
+       "4.712896856298033"
       ]
      },
      "execution_count": 10,
@@ -402,7 +402,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.03054779, 0.79599425, 0.54860643, 0.21350515])"
+       "array([0.02319134, 0.26448062, 0.31266139, 0.23091432])"
       ]
      },
      "execution_count": 15,
@@ -431,7 +431,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0.89200166, 0.92132996, 0.90856691])"
+       "array([0.73504154, 0.68004155, 0.7406859 ])"
       ]
      },
      "execution_count": 16,
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -711,6 +711,17 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "mean: 182 cm\n",
+    "25th percentile: 174 cm\n",
+    "75th percentile: 183 cm\n",
+    "\n",
+    "For the most part, this matches the calculations from the previous question. The only difference is due to not being able to visually differentiate between 174 cm and 174.25 cm."
    ]
   }
  ],
