--- a/labs/Lab3_LinearRegression/Introduction to Machine Learning with SciKit Learn.ipynb
+++ b/labs/Lab3_LinearRegression/Introduction to Machine Learning with SciKit Learn.ipynb
@@ -70,14 +70,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'sklearn.datasets.base.Bunch'>\n",
+      "<class 'sklearn.utils.Bunch'>\n",
       "(506, 13)\n",
       "(150, 4)\n",
       "(442, 10)\n",
@@ -139,9 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -162,7 +160,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
