Completed the clustering lab

--- a/labs/Lab8_Clustering/Clustering.ipynb
+++ b/labs/Lab8_Clustering/Clustering.ipynb
@@ -3715,7 +3715,9 @@
     "\n",
     "Additionally, there appears to be a binary difference between earnings that occur at higher education levels. This may infer that when educated people first enter the job market, they obtain entry level jobs which pay less than positions for those that are more experienced. Note however, this binary difference related to age does not exist for those with low amounts of education.\n",
     "\n",
-    "To reiterate, the behaviors just discussed appear to be stronger for men than they do for women. It appears that for the women, they may be hitting a glass ceiling, indicating that this may be an older data set that doesn't fully represent the current state of the job market."
+    "To reiterate, the behaviors just discussed appear to be stronger for men than they do for women. It appears that for the women, they may be hitting a glass ceiling, indicating that this may be an older data set that doesn't fully represent the current state of the job market.\n",
+    "\n",
+    "It's difficult to determine the best value for k, but based on the plots above, a k value between 4 and 6 appear to be the best for categorizing the data."
    ]
   },
   {
